# lif

./: .gitignore  CMakeLists.txt  Makefile  NICE.c  NICE.h  NICE.ipynb  NICE_Kernels.c  NICE_Kernels.h  NICE_Weights.c  NICE_Weights.h  README.md  lif_config.h  lif_decode.c  lif_decode.h  lif_decoder_forward.c  lif_encode.c  lif_encode.h  lif_encoder_forward.c  linket_config.h  linket_decode.c  linket_decode.h  linket_decoder_forward.c  linket_encode.c  linket_encode.h  linket_encoder_forward.c  requirements.txt
eval/: algo.cpp  algo.h  lif_algo.cpp  linket_algo.cpp  main.cpp
preprocess/: CMakeLists.txt  main.cpp
scripts/: export.sh
src/: data.py  net.py  preprocess.py  train.py
streamer/: CMakeLists.txt  camera.cpp  camera.h  main.cpp  stream.cpp  stream_options.cpp  stream_options.h  viewer.cpp
streamer/cmake/: glow.cmake
tools/common/: CMakeLists.txt
tools/eval/: CMakeLists.txt  main.cpp  timer.cpp  timer.h
tools/pretrain/: CMakeLists.txt  main.cpp
tools/streamer/: CMakeLists.txt  main.cpp  options.cpp  options.h  stream.cpp
tools/viewer/: CMakeLists.txt  main.cpp
train/: README.md  requirements.txt
train/configs/: m0_large.json  m0_medium.json  m0_small.json  m1_medium.json  m2_medium.json
train/preprocess/: main.cpp
train/scripts/: export.sh
train/src/: config.py  data.py  export_onnx.py  net.py  train.py
train/src/algos/: base.py  factory.py  linear_resnet.py  m0.py  m1.py  m2.py
train/src/nn/: decoder.py  encoder.py  linear_resnet.py  quantize.py
